@@ -25,7 +25,7 @@
    +----------------------------------------------------------------------+
 */
 
-/* $Id: oci8_statement.c,v 1.7.2.11 2006/02/03 14:46:42 tony2001 Exp $ */
+/* $Id: oci8_statement.c,v 1.7.2.12 2006/02/15 20:44:55 tony2001 Exp $ */
 
 
 #ifdef HAVE_CONFIG_H
@@ -282,8 +282,9 @@ int php_oci_statement_execute(php_oci_statement *statement, ub4 mode TSRMLS_DC)
 
 	switch (mode) {
 		case OCI_COMMIT_ON_SUCCESS:
+		case OCI_DESCRIBE_ONLY:
 		case OCI_DEFAULT:
-			/* only these two are allowed */
+			/* only these are allowed */
 			break;
 		default:
 			php_error_docref(NULL TSRMLS_CC, E_WARNING, "Invalid execute mode given: %d", mode);
